src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ACF_Comparison_Rate__c</fullName>
        <description>Click Loans</description>
        <label>Comparison_Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ClickFeature_1__c</fullName>
        <label>Feature 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickFeature_2__c</fullName>
        <label>Feature 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickFeature_3__c</fullName>
        <label>Feature 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAdd_Repayments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Add Repayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfApplication_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Application Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfConstruction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDebit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Debit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDefaults_12_months_amount__c</fullName>
        <description>Click Loans</description>
        <label>Defaults &gt;12 months amount</label>
        <picklist>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited when registered &gt;24 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max of 2 &lt;24 months</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>acfDefaults_12_months_max_of_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Defaults &lt;12 months (max of 2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDefaults_36_months_unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Defaults &gt;36 months (unlimited)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDefaults_up_to_1000__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Defaults up to $1000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDefaults_up_to_500__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Defaults up to $500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDischarged_from_bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Discharged from bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfFunder__c</fullName>
        <description>Click Loans</description>
        <label>acfFunder</label>
        <picklist>
            <picklistValues>
                <fullName>Pepper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macquarie</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>acfInterest_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Interest Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfInterest_Only_term__c</fullName>
        <description>Click Loans</description>
        <label>Interest Only term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfLegal_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Legal Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfLoan_Size__c</fullName>
        <description>Click Loans</description>
        <label>Loan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfMortgage_arrears__c</fullName>
        <description>Click Loans</description>
        <label>Mortgage arrears</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1 month considered within last 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 2 months within last 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonoured payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>minor arrears considered</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>acfMultiple_Splits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Multiple Splits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfOffset_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Offset Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfOngoing_Fees__c</fullName>
        <description>Click Loans</description>
        <label>Ongoing Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfRedraw__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Redraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfTenure_in_Years__c</fullName>
        <description>Click Loans</description>
        <label>Term (in Years)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfTotal_Fee__c</fullName>
        <description>Click Loans</description>
        <formula>acfApplication_Fee__c +  acfValuation_Fee__c +  acfOngoing_Fees__c +  acfLegal_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfType__c</fullName>
        <description>Click Loans</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfValuation_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Valuation Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfvarTenure_In_Years__c</fullName>
        <description>Click Loans</description>
        <label>Tenure (In Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Mac_Products</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>acfFunder__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>acfvarTenure_In_Years__c</columns>
        <columns>acfTenure_in_Years__c</columns>
        <columns>acfOffset_Account__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acfFunder__c</field>
            <operation>equals</operation>
            <value>Macquarie</value>
        </filters>
        <label>Mac Products</label>
    </listViews>
    <listViews>
        <fullName>Pepper_Products</fullName>
        <columns>acfFunder__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>acfvarTenure_In_Years__c</columns>
        <columns>acfTenure_in_Years__c</columns>
        <columns>acfOffset_Account__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acfFunder__c</field>
            <operation>equals</operation>
            <value>Pepper</value>
        </filters>
        <label>Pepper Products</label>
    </listViews>
    <recordTypes>
        <fullName>acfFixed</fullName>
        <active>true</active>
        <label>Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>acfVariable</fullName>
        <active>true</active>
        <label>Variable</label>
    </recordTypes>
</CustomObject>